fix(snippet): add line break when content overflows

--- a/packages/components/_provisional/src/snippet/styles/index.module.scss
+++ b/packages/components/_provisional/src/snippet/styles/index.module.scss
@@ -10,5 +10,5 @@
   border-radius: theme.get-spacing(1);
   background-color: theme.get-color(neutral-light-1-5);
   font-family: monospace;
-  white-space: pre;
+  white-space: pre-wrap;
 }
